# biobj-simplex

./: CMakeLists.txt  README.md  biobj_simplex.cpp  biobj_simplex.hpp
examples/: CMakeLists.txt  example1.cpp  reader.cpp
include/: biobj_simplex.hpp
src/: CMakeLists.txt  biobj_simplex.cpp  biobj_simplex.hpp
test/: Biobj_simplex_test.cpp  CMakeLists.txt
